hphp/hack/test/typecheck/strict_method_call.php.exp
File "strict_method_call.php", line 3, characters 10-12:
Was expecting a return type hint (Typing[4030])
