hphp/hack/test/typecheck/strict_method_call.php
<?hh

function any() {}

function test(): void {
  // The method 'bar' does not exist but that's ok
  any()->bar();
}
